--- a/composer.json
+++ b/composer.json
@@ -14,18 +14,20 @@
 			"role": "Developer"
 		}
 	],
-	"license": "GPL-2.0-or-later",
+	"license": [
+    "GPL-2.0-or-later"
+  ],
 	"require": {
-		"typo3/cms-core": "^11"
-	},
-	"extra": {
-		"typo3/cms": {
-			"extension-key": "paginatedprocessors"
-		}
+		"typo3/cms-core": "^11.5"
 	},
 	"autoload": {
 		"psr-4": {
 			"Brightside\\Paginatedprocessors\\": "Classes"
+		}
+	},
+	"extra": {
+		"typo3/cms": {
+			"extension-key": "paginatedprocessors"
 		}
 	}
 }
