--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,14 @@
 	"keywords": ["TYPO3","pagination","dataProcessing"],
 	"version": "1.0.0",
 	"license": "GPL-2.0-or-later",
-	"homepage": "https://github.com/t3brightside/paginatedprocessors",
-	"authors": [
-		{
-			"name": "Tanel Põld",
-      "role": "Developer",
-      "email": "tanel@brightside.ee",
-      "homepage": "https://t3brightside.com"
-		}
-	],
+  "homepage": "https://t3brightside.com",
+  "authors": [
+      {
+          "name": "Tanel Põld",
+          "role": "Developer",
+					"homepage": "https://t3brightside.com"
+      }
+  ],
 	"require": {
 		"typo3/cms-core": "^11.5"
 	},
