--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "homepage": "https://t3brightside.com"
     }],
     "require": {
-        "typo3/cms-core": "^11.5"
+        "typo3/cms-core": "^10.4 || ^11.5"
     },
     "autoload": {
         "psr-4": {
