--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "homepage": "https://t3brightside.com"
     }],
     "require": {
-        "typo3/cms-core": "^11.5 || ^12.0"
+        "typo3/cms-core": "^11.5 || ^12.0",
+		"t3brightside/embedassets": "^1.2"
     },
     "autoload": {
         "psr-4": {
